# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  command.md  spec.yaml  sqlx-data.json
.cargo/: config.toml
configuration/: base.yaml  production.yaml
migrations/: 20231006011909_add_expired_to_subscription_tokens.sql  20231111160222_seed_user.sql  20231120001137_create_idempotency_table.sql  20231121231744_create_newsletter_issues_table.sql  20231121234433_rename_newsletter_issues_published_content.sql  20231121234956_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  password.rs  subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  newsletters.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
