[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Shadrach Tayo"]

[lib]
name = "zero2prod"
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
config = "0.13.3"
env_logger = "0.10.0"
log = "0.4.20"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
#reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }

[dev-dependencies]
reqwest = "0.11.18"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
